src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__any_duration_does_not_allow_string.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: "&diagnostics"
---
error[E062]: Invalid type nature for generic argument. STRING is no ANY_DURATION
  ┌─ <internal>:3:61
  │
3 │         FUNCTION func1   : INT VAR x : STRING; END_VAR test(x); END_FUNCTION
  │                                                             ^ Invalid type nature for generic argument. STRING is no ANY_DURATION

error[E062]: Invalid type nature for generic argument. WSTRING is no ANY_DURATION
  ┌─ <internal>:4:61
  │
4 │         FUNCTION func2  : INT VAR x : WSTRING; END_VAR test(x); END_FUNCTION
  │                                                             ^ Invalid type nature for generic argument. WSTRING is no ANY_DURATION
