src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__any_int_does_not_allow_reals.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: make_readable(&diagnostics)
---
ImprovementSuggestion { message: "Potential loss of information due to assigning 'REAL' to variable of type 'USINT'.", range: [SourceRange { range: 136..137 }] }
SyntaxError { message: "Invalid type nature for generic argument. REAL is no Int.", range: [SourceRange { range: 136..137 }], err_no: type__invalid_nature }
ImprovementSuggestion { message: "Potential loss of information due to assigning 'LREAL' to variable of type 'USINT'.", range: [SourceRange { range: 211..212 }] }
SyntaxError { message: "Invalid type nature for generic argument. LREAL is no Int.", range: [SourceRange { range: 211..212 }], err_no: type__invalid_nature }

